Fixed init script, fixed creating post service (for null checks)